# Palladia-Engine

./: .gitignore  README.md  build.zig  build.zig.zon
engine/include/ecs/: ecs.h
engine/include/geometry/: box.h  capsule.h  circle.h  cone.h  cylinder.h  dodecahedron.h  g_common.h  icosahedron.h  lathe.h  octahedron.h  plane.h  ring.h  sphere.h  tetrahedron.h  torus.h
engine/include/material/: basic_material.h  m_common.h  phong_material.h
engine/include/math/: matrix.h
engine/include/ui/: ui.h
engine/shaders/: phong_material.frag
engine/src/ecs/: ecs.c
engine/src/geometry/: box.c  capsule.c  circle.c  cone.c  cylinder.c  dodecahedron.c  g_common.c  (+8 more)
examples/: CMakeLists.txt
examples/demo_2d/: main.zig
examples/demo_mesh/: CMakeLists.txt  main.c  main.zig
examples/rectangle/: main.c
examples/stress_test_ico/: main.c  main.zig
examples/stress_test_ico_zig/: main.zig
src/: app.zig  main.zig  math.zig  resource.zig  root.zig  sdl.zig  world.zig
src/components/: ambientlight.zig  draw2d.zig  fpscameracontroller.zig  material.zig  mesh.zig  pointlight.zig  transform.zig  ui.zig
src/draw2d/: registry.zig  renderer.zig
src/ecs/: pool.zig  world.zig
src/geometry/: box.zig  capsule.zig  circle.zig  common.zig  cone.zig  cylinder.zig  dodecahedron.zig  icosahedron.zig  lathe.zig  mod.zig  octahedron.zig  plane.zig  ring.zig  sphere.zig  tetrahedron.zig  torus.zig
src/material/: basic.zig  common.zig  mod.zig  phong.zig  ui.zig
src/shader/: module.zig
src/system/: context.zig  scheduler.zig
src/systems/: fpscontroller.zig  render.zig
(+9 files in other folders)
